# vrc-binary-uploader

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml
api/: Cargo.toml  README.md
api/.openapi-generator/: FILES
api/api/: openapi.yaml
api/docs/: ErrorResponse.md  ImageMetadata.md  Index.md
api/examples/server/: server.rs
api/src/: lib.rs  models.rs
api/src/server/: mod.rs
docs/: api.yaml
mock-storage/: Cargo.toml
mock-storage/src/: main.rs
server/: Cargo.toml
server/src/: api_impl.rs  main.rs
server/src/handler/: messages.rs  mod.rs  ping.rs  update_merged_image.rs  upload_image.rs  upload_merged_image.rs
server/src/infrastructure/: converter.rs  error.rs  mod.rs  storage.rs
server/src/mock/infrastructure/: converter_mock.rs  mod.rs  storage_mock.rs
server/src/model/: error.rs  image.rs  mod.rs
server/src/service/: error.rs  mod.rs  upload_merged_image_service.rs  upload_single_image_service.rs
